--- a/package.json
+++ b/package.json
@@ -1,27 +1,44 @@
 {
-  "name": "vite-project",
+  "name": "chat-app",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "build": "vite build",
+    "dev": "vite dev",
+    "preview": "vite preview",
+    "typecheck": "tsc",
+    "server:dev": "bun run server/index.ts",
+    "server:start": "bun run server/index.ts",
+    "prisma:generate": "bunx prisma generate",
+    "prisma:studio": "bunx prisma studio"
   },
   "dependencies": {
-    "@react-router/node": "^7.5.3",
-    "@react-router/serve": "^7.5.3",
-    "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-router-dom": "6",
+    "socket.io-client": "^4.8.1",
+    "@prisma/client": "^6.11.1",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.1.0",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "isbot": "^5.1.27",
+    "jsonwebtoken": "^9.0.2",
+    "pino": "^9.7.0",
+    "prisma": "^6.11.1",
+    "redis": "^5.6.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.6.0",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
